Completed prep-html-syntax exercise.

--- a/prep-html-syntax/index.html
+++ b/prep-html-syntax/index.html
@@ -8,7 +8,7 @@
   <img
     src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1500w,f_auto,q_auto:best/newscms/2019_47/3112746/191121-baby-yoda-cs-959a.jpg"
     alt="Yoda">
-  <p style="color:purple;">this is my favorite character because he is cute</p>
+  <p style="color:purple;">this is my favorite character because he is cute.</p>
 </body>
 
 </html>
